# cyclicycles

./: ANCILLA_PARAMETER_CHANGES.md  ANCILLA_QUICK_REFERENCE.md  CHAIN_BREAK_VISUALIZATION.md  CODE_ORGANIZATION.md  EMBEDDING_CACHING.md  README.md  REFACTORING_SUMMARY.md  USAGE.md  pyproject.toml
data/: time.json
data/instances/6.4/N_10_realization_1/: J.npz
data/results/1.7/dynamics_3_timepoints_4_realization_1/: 1_forward_init.npz  2_forward_init.npz  3_forward_init.npz  4_forward_init.npz
data/results/1.7/dynamics_3_timepoints_5_realization_1/: 1_forward_init.npz  2_forward_init.npz
data/results/1.7/dynamics_8_timepoints_5_realization_1/: 1_forward_init.npz
data/results/4.1/N_2084_realization_1/: 1.npz  2.npz  3.npz
data/results/4.1/N_5627_realization_1/: 1.npz  2.npz  3.npz
scripts/: batch_cyclic_annealing.sh  calculate_tts.py  check_spin_glass.py  cyclic_annealing.py  export_tts_data.py  generate_spin_glass.py  plot_dynamics.py  plot_results.py
src/: config.py
src/cyclicycles/: config.py  instance.py  main.py  plotter.py  runner.py
zakaria/: dwave_cyclic_annealing.py
